# proto-http-parser

./: Cargo.toml  README.md  STRUCTURE.md  proto-http-parser.toml.example
benches/: parsing_benchmarks.rs
docs/: api-reference.md  configuration.md  examples.md  migration-guide.md  plugin-system.md  user-guide.md
examples/: basic_usage.rs  build_integration.rs  config_usage.rs  coordinator_usage.rs  custom_configuration_example.rs  multi_service_example.rs  performance_example.rs  plugin_usage.rs  sample_build.rs  single_service_example.rs  template_usage.rs
examples/complete_poem_server/: Cargo.toml  README.md  STATUS.md  build.rs  download_google_protos.sh
examples/complete_poem_server/proto/: api.proto  simple_api.proto
examples/complete_poem_server/src/: lib.rs  main.rs
examples/complete_poem_server/src/services/: author_service.rs  book_service.rs  mod.rs
examples/complete_poem_server/tests/: integration_test.rs
src/: config.rs  coordinator.rs  core.rs  error_reporter.rs  errors.rs  extractor.rs  generator.rs  lib.rs  parser.rs  plugins.rs  templates.rs  utils.rs  validation.rs
src/core/: config.rs  data.rs  data_test.rs  errors.rs
src/plugins/: config.rs  examples.rs
test_proto_files/: user.proto
tests/: code_generation_tests.proptest-regressions  code_generation_tests.rs  controller_tests.rs  extractor_tests.proptest-regressions  extractor_tests.rs  integration_tests.rs  plugin_tests.rs  service_trait_tests.proptest-regressions  service_trait_tests.rs  template_tests.proptest-regressions  template_tests.rs  validation_tests.rs
