[package]
name = "proto-http-parser"
version = "2.0.0"
edition = "2021"
description = "A Rust library for parsing Protocol Buffer HTTP annotations and generating poem-openapi controllers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mrzrb/proto-http-parser"
keywords = ["protobuf", "http", "poem", "openapi", "codegen"]
categories = ["development-tools", "web-programming"]

[dependencies]
nom = "7.0"
handlebars = "4.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
criterion = "0.5"
pretty_assertions = "1.0"

[[bench]]
name = "parsing_benchmarks"
harness = false

[lib]
name = "proto_http_parser_v2"

[workspace]
# This is a standalone project, not part of a workspace